--- a/clases/PrimerEjercicio.ui
+++ b/clases/PrimerEjercicio.ui
@@ -224,8 +224,20 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuCerrar">
+    <property name="title">
+     <string>Cerrar</string>
+    </property>
+    <addaction name="actionSalir"/>
+   </widget>
+   <addaction name="menuCerrar"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionSalir">
+   <property name="text">
+    <string>Salir</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
